Fixed log-table alignment with page navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@
 }
 
 .log-table-mini {
-  margin-left: 2.9%;
+  margin-left: 2%;
   max-width: 80%!important;
   border-left: solid;
   border-width: 4px;
@@ -166,7 +166,7 @@
 }
 
 .item-detail-view-logs {
-  margin-left: -3.4%;
+  margin-left: -3%;
   max-width:80%;
 }
 
